devops-303/devops-303-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-303
spec:
  selector:
    app: devops-303
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8884
