devops-303/devops-303-Ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-303
spec:
  rules:
    - host: devops-303.ianis
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-303
                port:
                  number: 8884
